2007-08-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	Added button for copying metatags to clipboard

	* configure.in:
	Changed required exiv2 version to 0.14 or more

2007-07-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags-exiv2.cc:
	Use exiv2 interpreted values

	* src/utils.h:
	Added join(coll,sep) function family

	* src/tags/gnome-cmd-tags.h:
	Added support for multiple tags in advrename

2007-07-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	Make help button context (tab) aware

	* src/tags/gnome-cmd-tags.h:
	Fix for g++ 3.4 build

2007-07-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.cc:
	Make image metatags working in advrename again

	* src/tags/gnome-cmd-exiv2.cc:
	Yet another fix for Exif.Makernote

2007-07-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/tags/gnome-cmd-tags-file.cc:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Remove "File.Created" tag (info->ctime ISN'T creation time ;o)

	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-exiv2.cc:
	* src/tags/gnome-cmd-tags-taglib.cc:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Copy metatags value for some File.tags

	* src/tags/gnome-cmd-tags-exiv2.cc:
	Suppress Exif.Makernote, as it contains unrecognized binary data

2007-07-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	Added scrollbars to metatags file prop dlg

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-lexer.ll:
	* src/utils.cc:
	* src/utils.h:
	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-file.cc:
	* src/tags/gnome-cmd-tags-file.h:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Added support for File metatags

2007-07-18  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* data/gnome-commander.spec.in:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-exiv2.cc: